# avshelf

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
src/avshelf/: __init__.py  analysis.py  cli.py  config.py  database.py  deep_scan.py  mcp_server.py  nlq.py  probe.py  scanner.py  sync.py
