[project]
name = "avshelf"
version = "0.1.0"
description = "A media asset management tool powered by ffprobe"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
avshelf = "avshelf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avshelf"]
